[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-tree"
version = "1.0.0"
authors = [
    {name = "Harry Dobbs", email = "harrydobbs87@gmail.com"},
]
description = "Neural Network Point Cloud Tree Skeletonization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    'numpy',
    'open3d',
    'hydra-core>=1.2.0',
    'click',
    'oauthlib',
    'spconv-cu117',
    'wandb',
    'cmapy',
    'plyfile',
    'py_structs',
    'torchtyping',
    'beartype',
    'typeguard==2.11.1',
    'taichi',
    'pycln',
    'isort',
    'pre-commit',
    'pytest'
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
run-smart-tree = "smart_tree.cli:main"
train-smart-tree = "smart_tree.model.train:main"
view-npz = "smart_tree.scripts.view_npz:main"
view-pcd = "smart_tree.scripts.view_pcd:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"

[tool.isort]
profile = "black"
